updated nav bar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
         </div>
 
         <div class="column">
-            <h2>Nav Bar</h2>
+            <div class="navbar">
+                <a class="active" href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
+                <a href="#"><i class="fa fa-fw fa-info"></i> About</a>
+                <a href="#"><i class="fa fa-fw fa-concierge-bell"></i> Service</a>
+                <a href="#"><i class="fa fa-fw fa-address-card"></i> Contact</a>
+            </div>
         </div>
     </div>
 
