--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 <body>
     <div class="header">
         <div class="column">
-            <a href="index.html"><h1>Logo</h1></a>
+            <div class="logo">
+                <a href="index.html"> 
+                    <img src="assets/images/DP.jpg" alt="Man-Smiling-Open-To-Work" height="100px" width="100px">
+                    <h1>Thomas & Partners</h1>
+                </a>
+            </div>
         </div>
 
         <div class="column">
@@ -42,8 +47,8 @@
             <h3>Contact Us</h3>
                 <div id="Customer-Service">
                     <h5>Customer Service</h5>
-                    <p>Telephone: <a href="tel:+447581059340">0207-123-123</a></p>
-                    <p>Email: <a href="email:coopsx@googlemail.com">customer-service@thomaspartners.com</a></p>
+                    <p>Telephone : <a href="tel:+447581059340">0207-123-123</a> <i class="fas fa-phone"> </i> </p>
+                    <p>Email : <a href="mailto:coopsx@googlemail.com">customer-service@thomaspartners.com</a> <i class="fas fa-envelope"></i></p>
                 </div>
         </div>
 
