added about, service and added links

--- a/service.html
+++ b/service.html
@@ -21,9 +21,9 @@
 
         <div class="column">
             <div class="navbar">
-                <a class="active" href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
+                <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
                 <a href="about.html"><i class="fa fa-fw fa-info"></i> About</a>
-                <a href="service.html"><i class="fa fa-fw fa-concierge-bell"></i> Service</a>
+                <a class="active" href="service.html"><i class="fa fa-fw fa-concierge-bell"></i> Service</a>
                 <a href="contact.html"><i class="fa fa-fw fa-address-card"></i> Contact</a>
             </div>
         </div>
@@ -31,12 +31,23 @@
 
     <div class="content">
         <div class="column-l">
-            <h1>A UNIQUE APPROACH TO BUSINESS TRAVEL</h1>
+            <h3>A UNIQUE APPROACH TO BUSINESS TRAVEL</h3>
             <p>Thomas & Partners delivers corporate travel management for professionals with exacting needs. We combine inspired service with state-of-the-art technology to create a level of travel management like no other and deliver value you might not believe possible.
             </p>
+            <img src="assets/images/DP.jpg" alt="Man-Smiling-Open-To-Work">
+        </div>
+
+        <div class="column-l">
+            <h3>A UNIQUE APPROACH TO BUSINESS TRAVEL</h3>
+            <p>Thomas & Partners delivers corporate travel management for professionals with exacting needs. We combine inspired service with state-of-the-art technology to create a level of travel management like no other and deliver value you might not believe possible.
+            </p>
+            <img src="assets/images/DP.jpg" alt="Man-Smiling-Open-To-Work">
         </div>
 
         <div class="column-r">
+            <h3>A UNIQUE APPROACH TO BUSINESS TRAVEL</h3>
+            <p>Thomas & Partners delivers corporate travel management for professionals with exacting needs. We combine inspired service with state-of-the-art technology to create a level of travel management like no other and deliver value you might not believe possible.
+            </p>
             <img src="assets/images/DP.jpg" alt="Man-Smiling-Open-To-Work">
         </div>
     </div>
